--- a/src/style.css
+++ b/src/style.css
@@ -19,9 +19,27 @@ body {
   height: 100%;
 }
 
- polygon.hex-polygon {
-  /*fill: #001218;*/
+polygon.hex-polygon {
   fill-opacity: 0;
   stroke: #001218;
   stroke-width: 4px;
+}
+
+polygon.hex-polygon.centre {
+  stroke-opacity: 0.3;
+}
+
+polygon.hex-polygon.pad {
+  cursor: pointer;
+  fill-opacity: 0.05;
+  fill: #62afc9;
+  transition: transform 0.5s, stroke 0.5s;
+  transform: scale(1);
+  transform-origin: 50% 50%;
+}
+
+polygon.hex-polygon.pad:hover {
+  transform: scale(1.3);
+  stroke: #62afc9;
+  fill-opacity: 0.1;
 }
