--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,11 @@
 body {
   background-color: #000a0d;
   margin: 0;
+  cursor: none;
 }
 
 #templates {
-  /*display: none;*/
+  display: none;
 }
 
 #stage {
@@ -30,7 +31,6 @@ polygon.hex-polygon.centre {
 }
 
 polygon.hex-polygon.pad {
-  cursor: pointer;
   fill-opacity: 0.05;
   fill: #62afc9;
   transition: transform 0.5s, stroke 0.5s;
@@ -42,4 +42,27 @@ polygon.hex-polygon.pad:hover {
   transform: scale(1.3);
   stroke: #62afc9;
   fill-opacity: 0.1;
+}
+
+#stage .interaction {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+#stage .interaction .touch-overlay {
+  position: absolute;
+  height: 0;
+  width: 0;
+}
+
+#stage .interaction .touch-overlay.multi-0::before {
+  content: "";
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  border-radius: 50px;
+  height: 40px;
+  width: 40px;
+  border: 2px solid #f00;
 }
