--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: tr2n;
+    src: url(fonts/tr2n/Tr2n.ttf);
+}
+
 body {
   background-color: #000a0d;
   margin: 0;
@@ -22,12 +27,12 @@ body {
 
 polygon.hex-polygon {
   fill-opacity: 0;
-  stroke: #001218;
+  stroke: rgba(32, 204, 255, 0.1);
   stroke-width: 4px;
 }
 
 polygon.hex-polygon.centre {
-  stroke-opacity: 0.3;
+  stroke-opacity: 0.2;
 }
 
 polygon.hex-polygon.pad {
@@ -42,6 +47,44 @@ polygon.hex-polygon.pad:hover {
   transform: scale(1.3);
   stroke: #62afc9;
   fill-opacity: 0.1;
+}
+
+#stage .widget-centre {
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: 50%;
+  left: 50%;
+}
+
+#stage .widget {
+  transform: scale(1);
+  opacity: 1;
+  transition: transform 0.3s, opacity 0.2s;
+}
+
+#stage .widget.hidden {
+  transform: scale(0);
+  opacity: 0;
+}
+
+#stage .widget-centre .clock .text {
+  position: absolute;
+  color: rgba(32, 204, 255, 0.7);
+  font-size: 120px;
+  font-family: "Ubuntu", "tr2n";
+  line-height: 100%;
+  width: 600px;
+  top: -60px;
+  left: -300px;
+  text-align: center;
+  text-shadow: 0px 0px 10px rgba(32, 204, 255, 0.7);
+}
+
+#stage .widget-centre .clock .lock {
+  position: absolute;
+  top: 50px;
+  left: -100px;
 }
 
 #stage .interaction {
