--- a/src/style.css
+++ b/src/style.css
@@ -13,27 +13,14 @@
     to {transform:rotate(-360deg);}
 }
 
-@keyframes lock-finger-show {
-    0% {
-      transform: scale(0.5);
-      opacity: 0;
-      background-color: rgba(255, 255, 255, 0);
-      }
-    10% {
-      transform: scale(1);
-      opacity: 0.4;
-      background-color: rgba(255, 255, 255, 0);
-      }
-    30% {
-      transform: scale(1);
-      opacity: 1;
-      background-color: rgba(255, 255, 255, 0);
-      }
-    100% {
-      transform: scale(1);
-      opacity: 1;
-      background-color: rgba(255, 255, 255, 0.1);
-      }
+@keyframes close {
+    from {transform:scale(1); opacity: 1;}
+    to {transform:scale(0.5); opacity: 0;}
+}
+
+@keyframes show {
+    from {transform:scale(0.5); opacity: 0;}
+    to {transform:scale(1); opacity: 1;}
 }
 
 body {
@@ -287,17 +274,46 @@ polygon.hex-polygon.pad:hover {
   border-radius: 50%;
   height: 100px;
   width: 100px;
-  border: 3px solid rgba(255, 255, 255, 0.8);
-  box-shadow: inset 0px 0px 10px rgba(255, 255, 255, 0.7), 0px 0px 10px rgba(255, 255, 255, 0.7);
+  border: 3px solid rgba(255, 255, 255, 0.5);
+  box-shadow: inset 0px 0px 10px rgba(255, 255, 255, 0.4), 0px 0px 10px rgba(255, 255, 255, 0.4);
   background-color: rgba(255, 255, 255, 0.1);
-  animation-name: lock-finger-show;
-  animation-duration: 1500ms;
+  animation-name: show;
+  animation-duration: 500ms;
   animation-iteration-count: 1;
-  animation-timing-function: linear;
+  animation-timing-function: ease;
 }
 
 #stage .interaction .touch-overlay.lock-finger .arcs-2 {
   border-color: rgba(255, 255, 255, 0.8);
   border-top-color: transparent;
   border-bottom-color: transparent;
+}
+
+#stage .interaction .lock-dialog {
+  position: absolute;
+
+}
+
+#stage .interaction .lock-dialog .inner {
+  position: absolute;
+  top: -153px;
+  left: -153px;
+  height: 300px;
+  width: 300px;
+  border-radius: 20%;
+  border: 3px solid rgba(255, 255, 255, 0.8);
+  box-shadow: inset 0px 0px 10px rgba(255, 255, 255, 0.7), 0px 0px 10px rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.2);
+  animation-name: show;
+  animation-duration: 600ms;
+  animation-iteration-count: 1;
+  animation-timing-function: ease;
+}
+
+#stage .close {
+  transform: scale(0);
+  animation-name: close;
+  animation-duration: 600ms;
+  animation-iteration-count: 1;
+  animation-timing-function: ease;
 }
