--- a/touch-dashboard/style.css
+++ b/touch-dashboard/style.css
@@ -64,18 +64,33 @@ polygon.hex-polygon.centre {
   stroke-opacity: 0.2;
 }
 
-polygon.hex-polygon.pad {
-  fill-opacity: 0.05;
+polygon.hex-polygon.button {
+  fill-opacity: 0.1;
   fill: #62afc9;
-  transition: transform 0.5s, stroke 0.5s;
-  transform: scale(1);
+  stroke: rgba(32, 204, 255, 0.2);
+  transition: stroke 0.3s;
+  transform: scale(0.9);
   transform-origin: 50% 50%;
 }
 
-polygon.hex-polygon.pad:hover {
-  transform: scale(1.3);
-  stroke: #62afc9;
+polygon.hex-polygon.button.touching {
+  stroke: rgba(255, 255, 255, 0.3);
+}
+
+polygon.hex-polygon.button-inner {
   fill-opacity: 0.1;
+  fill: #fff;
+  stroke: rgba(255, 255, 255, 0.4);
+  transition: transform 0.5s, opacity 0.5s;
+  transform-origin: 50% 50%;
+  transform: scale(0.1);
+  opacity: 0;
+}
+
+polygon.hex-polygon.button-inner.touching {
+  transition: transform 0.1s, opacity 0.2s;
+  transform: scale(0.75);
+  opacity: 1;
 }
 
 #stage .widget-centre {
