--- a/touch-dashboard/style.css
+++ b/touch-dashboard/style.css
@@ -192,7 +192,7 @@ polygon.hex-polygon.button-inner.touching {
 
 #stage .widget-centre .clock .text {
   position: absolute;
-  color: rgba(32, 204, 255, 0.7);
+  color: rgba(32, 204, 255, 0.7) !important;
   font-size: 120px;
   font-family: "Ubuntu", "tr2n";
   line-height: 100%;
