--- a/touch-dashboard/style.css
+++ b/touch-dashboard/style.css
@@ -28,7 +28,7 @@
   font-size: 40px;
   text-align: center;
   color: rgba(32, 204, 255, 0.5);
-  transition: color 0.3s, transform 0.3s;
+  transition: transform 0.3s;
   transform: scale(1);
   transform-origin: 50% 50%;
 }
@@ -80,7 +80,7 @@
 }
 
 body {
-  background-color: #000a0d;
+  background-color: #000000;
   margin: 0;
   cursor: none;
 }
@@ -103,27 +103,27 @@ body {
 
 polygon.hex-polygon {
   fill-opacity: 0;
-  stroke-opacity: 0.5;
-  stroke: rgba(32, 204, 255, 0.2);
+  stroke-opacity: 0.4;
   stroke-width: 4px;
 }
 
 polygon.hex-polygon.centre {
-  stroke-opacity: 0.2;
+  stroke-opacity: 0.1;
 }
 
 polygon.hex-polygon.button {
+  opacity: 1;
   fill-opacity: 0.1;
   fill: #62afc9;
-  stroke: rgba(32, 204, 255, 0.2);
-  transition: stroke 0.3s, fill 0.3s;
+  stroke-opacity: 0.4;
+  transition: stroke-opacity 1s;
   transform: scale(0.9);
   transform-origin: 50% 50%;
 }
 
 polygon.hex-polygon.button.touching {
-  stroke: rgba(255, 255, 255, 0.3);
-  transition: stroke 0s;
+  transition: stroke-opacity 0s;
+  stroke-opacity: 1;
 }
 
 polygon.hex-polygon.button.error {
@@ -132,9 +132,11 @@ polygon.hex-polygon.button.error {
 }
 
 polygon.hex-polygon.button-inner {
+  opacity: 1;
+  stroke-opacity: 1;
   fill-opacity: 0.1;
   fill: #fff;
-  stroke: rgba(255, 255, 255, 0.4);
+  stroke: rgba(255, 255, 255, 0.7);
   transition: transform 0.5s, opacity 0.5s;
   transform-origin: 50% 50%;
   transform: scale(0.1);
@@ -180,7 +182,7 @@ polygon.hex-polygon.button-inner.touching {
   margin: 0;
   font-size: 20px;
   line-height: 150%;
-  opacity: 0.7;
+  opacity: 0.6;
 }
 
 #stage .widget-centre .media-info p.media-title {
